First two login tests
Added valid and invalid login tests
Added logging and (env) validation

--- a/default.env
+++ b/default.env
@@ -1,5 +1,15 @@
-browser=chrome
+# Valid values are; chrome, firefox, internet_explorer , ms_edge, safari
+
+browser=firefox
 
 url=https://google-gruyere.appspot.com
 
 session_id=575718644975
+
+account_login=smckinney
+
+account_password=password
+
+# Valid values for log_level are; warn, error, debug, info or fatal
+
+log_level=info
