Added conditional delete of snippet
Completed logging of scenario result in after step

--- a/default.env
+++ b/default.env
@@ -1,4 +1,7 @@
-# Valid values are; chrome, firefox, internet_explorer , ms_edge, safari
+# Valid values are; chrome, firefox,
+# internet_explorer, ms_edge, safari
+# poltergeist or marionette
+# depending on OS and installed drivers
 
 browser=firefox
 
